# home-automation

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  compose.yaml  compose.yml  config.json  current.yml  desktop.ini  devices.yaml  docker-compose-thread.yml  docker-compose.yml  docker_run.sh  env.sh  example_start_services.sh  get_raspi.sh  hosts  index.html  install_services.sh  manifest.json  nginx.conf  plan.md  readme-docker-compose.md  readme-wifi.md  requirements.txt  run.sh  run_docker.sh  run_services.sh  run_venv.sh  services.yaml  setup.sh  setup_border_router.sh  setup_docker-compose.sh  setup_docker.sh  setup_thread_services.sh  start_services.sh  status.sh  webapps.yaml  webapps.yml
design/: home automation.graphml  openthread environment.graphml
esphome/: .gitignore  readme.md  requirements.txt
grafana/: grafana.ini
home_status/: Dockerfile  cfg.py  home.py
house_heating/: index.html  manifest.json
loki/: README.md  config.yaml  install  install.sh  loki.service  promtail-config.yaml
matter/: form.sh
mosquitto/: mosquitto.conf
nginx/: .gitignore  nginx.conf
promtail/: README.md  config.yaml  install  install.sh  promtail.service
zigbee2mqtt/: README.md  _lib.sh  backup.sh  bind device to static name.md  coordinator_backup.sh  coordinator_restore.sh  eurotronic_reconfigure.py  firmware_backup.sh  firmware_restore.sh  mqtt_dump.py  pyproject.toml  restore.sh  test_euro.py  troubleshooting.md  z2m  z2m_request_backup.js
zigbee2mqtt/firmware/: README.md
zigbee2mqtt/z2m_tools/: __main__.py  common.py  main.py  ops.py
(+440 files in other folders)
